--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.7
 django-autoslug==1.9.8
 django-crontab==0.7.1
+django-filter==2.4.0
 django-model-utils==4.1.1
 django-timestampedmodel==0.1.0
 djangorestframework==3.12.2
